--- a/app/translations/ro/core.json
+++ b/app/translations/ro/core.json
@@ -1,25 +1,25 @@
 {
     "cancel": "Renunţă",
     "add": "Adaugă",
-    "addit": "Add & Edit",
+    "addit": "Adaugă & Editează",
     "save": "Salvează",
     "saved": "Salvat!",
     "change": "Modifică",
     "delete": "Şterge",
     "insert": "Inserează",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "URL-ul interfeţei de administrare este nevalid",
+    "controller.error.invalid": "Controller nevalid",
+    "controller.error.action": "Operaţie nevalidă",
+    "view.error.invalid": "Vizualizare nevalidă:",
     "options.show": "Arată opţiunile",
     "options.hide": "Ascunde opţiunile",
     "installation": "Instalare",
-    "installation.check.headline": "Instalarea panoului de administrare",
+    "installation.check.headline": "Instalarea interfeţei de administrare",
     "installation.check.text": "Sistemul a întâmpinat următoarele probleme în timpul instalării:",
     "installation.check.retry": "Ignoră",
     "installation.check.error": "Sunt câteva probleme!",
-    "installation.check.error.allowed": "You are only allowed to run the panel installer from the same computer that is the server or by setting the option panel.install to true in your /site/config/config.php",
+    "installation.check.error.allowed": "Instalarea interfaţei de administrare se poate face doar de pe server, sau setând opţiunea <b>true</b> panel.install în <i>/site/config/config.php</i>",
     "installation.check.error.accounts": "Directorul <i>/site/accounts</i> nu are permisiuni de scriere.",
     "installation.check.error.avatars": "Directorul <i>/assets/avatars</i> nu are permisiuni de scriere.",
     "installation.check.error.blueprints": "Creează te rog directorul <i>/site/blueprints</i>!",
@@ -32,14 +32,14 @@
     "installation.signup.password.label": "Parola",
     "installation.signup.language.label": "Limba",
     "installation.signup.button": "Creează contul",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Conectare",
+    "login.welcome": "Conectează-te cu noul tău cont",
     "login.username.label": "Nume utilizator",
     "login.password.label": "Parola",
     "login.error": "Nume de utilizator greşit, sau parolă invalidă.",
-    "login.button": "Log in",
-    "login.log.error.permissions": "Login log file is not writable.",
-    "logout": "Log out",
+    "login.button": "Conectare",
+    "login.log.error.permissions": "Fişierul de conectare nu are permisiuni de scriere.",
+    "logout": "Ieşire",
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Panoul de control",
     "dashboard.index.pages.title": "Pagini",
@@ -53,7 +53,7 @@
     "dashboard.index.history.title": "Ultimele pagini modificate",
     "dashboard.index.history.text": "Paginile modificate recent vor fi afişate aici pentru a putea fi găsite uşor mai târziu.",
     "dashboard.index.license.title": "Licenţa Kirby",
-    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
+    "dashboard.index.license.text": "Se pare că utilizezi Kirby pe un server public fără să deţii o licenţă validă!\n\nTe rog susţine Kirby şi (link: {buy} text: cumpără o licenţă acum)\n\nDacă ai deja un cod de licenţă, adaugă-l în fişierul config: (link: {docs} text: site/config/config.php)",
     "metatags": "Variabile sait",
     "metatags.info": "Info Kirby",
     "metatags.license": "Licenţa Kirby",
@@ -62,7 +62,7 @@
     "metatags.version.panel": "Versiune Panel",
     "metatags.back": "Înapoi la panoul de control",
     "metatags.files": "Fişiere sait",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "Saitul nu poate fi şters",
     "pages.show.settings": "Setări pagină",
     "pages.show.preview": "Previzualizare",
     "pages.show.template": "Tip pagină",
@@ -94,7 +94,7 @@
     "pages.add.url.close": "Închide",
     "pages.add.url.help": "Caractere permise: litere mici de la a la z, cifre şi cratime.",
     "pages.add.template.label": "Tip pagină",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Pagina nu a putut fi creată",
     "pages.add.error.title": "Lipseşte titlul",
     "pages.add.error.template": "Nu a fost selectat tipul paginii!",
     "pages.add.error.max.headline": "Nu sunt permise pagini noi!",
@@ -103,18 +103,18 @@
     "pages.url.uid.label.option": "Foloseşte titlul",
     "pages.url.error.exists": "Există deja o pagină cu aceeaşi terminaţie URL!",
     "pages.url.error.move": "Terminaţia URL nu poate fi modificată!",
-    "pages.url.error.rights": "You cannot change the URL of this page",
+    "pages.url.error.rights": "Nu poţi modifica URL-ul acestei pagini",
     "pages.template.select.label": "Tip pagină",
-    "pages.template.warning.text": "The following fields will change, when you switch the template",
-    "pages.template.warning.removed": "Removed fields",
-    "pages.template.warning.replaced": "Replaced fields",
-    "pages.template.warning.added": "Added fields",
-    "pages.template.error": "The template for this page cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
+    "pages.template.warning.text": "Următoarele câmpuri se vor modifica dacă schimbi şablonul paginii",
+    "pages.template.warning.removed": "Câmpuri şterse",
+    "pages.template.warning.replaced": "Câmpuri înlocuite",
+    "pages.template.warning.added": "Câmpuri adăugate",
+    "pages.template.error": "Şablonul acestei pagini nu poate fi schimbat",
+    "pages.toggle.position": "Pozitie",
+    "pages.toggle.invisible": "invizibil",
     "pages.toggle.publish": "Sigur vrei sa faci **vizibilă** această pagină?",
     "pages.toggle.hide": "Sigur vrei sa faci **invizibilă** această pagină?",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.error.error": "Statusul paginii de eroare nu poate fi modificat",
     "pages.delete.headline": "Sigur vrei sa ştergi această pagină?",
     "pages.delete.error.home.headline": "Pagina principală nu poate fi ştearsă!",
     "pages.delete.error.home.text": "Ai încercat să ştergi pagina principală a saitului. Acest lucru nu e posibil pentru că ar apărea efecte nedorite.",
@@ -137,8 +137,8 @@
     "subpages.index.visible.help": "Trage aici pagini pentru a le face vizibile.",
     "subpages.index.invisible": "Pagini invizibile",
     "subpages.index.invisible.help": "Trage aici pagini pentru a le face invizibile.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Această pagină nu permite subpagini",
+    "subpages.add.error.more": "Aceastei pagini nu i se mai pot adăuga subpagini",
     "subpages.error.missing": "Pagina nu a putut fi găsită!",
     "files": "Fişiere",
     "files.index.headline": "Fişiere",
@@ -148,15 +148,15 @@
     "files.index.upload.first.button": "Încarcă un prim fişier",
     "files.index.edit": "Editează",
     "files.index.delete": "Şterge",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Această pagină nu permite fişiere",
+    "files.add.error.max": "Numărul maxim de fişiere al acestei pagini a fost atins.",
+    "files.add.error.extension.missing": "Nu e permisă încărcarea de fişiere fără extensie",
+    "files.add.error.extension.forbidden": "Extensie de fişier interzisă",
+    "files.add.error.mime.forbidden": "Tip de fişier interzis",
+    "files.add.error.htaccess": "Fişierele htaccess nu pot fi încărcate",
+    "files.add.error.invisible": "Fişierele inviyibile nu pot fi încărcate",
+    "files.add.blueprint.type.error": "Pagina permite doar:",
+    "files.add.blueprint.size.error": "Pagina permite doar fişiere de până la ",
     "files.show.name.label": "Nume fişier",
     "files.show.info.label": "Tip / Mărime / Dimensiuni",
     "files.show.link.label": "Calea către imagine",
@@ -204,29 +204,29 @@
     "users.form.back": "Înapoi la utilizatori",
     "users.form.error.password.confirm": "Confirmă parola, te rog!",
     "users.form.error.update": "Contul de utilizator nu a putut fi actualizat!",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Nu ai permisiunea de a actualiza acest cont",
     "users.form.error.create": "Contul de utilizator nu a putut fi creat!",
     "users.form.error.permissions.title": "Directorul <i>/site/accounts</i> nu are permisiuni de scriere.",
     "users.form.error.permissions.text": "Verifică dacă directorul <i>/site/accounts</i> există şi are permisiuni de scriere.",
     "users.delete.headline": "Sigur vrei să ştergi acest cont de utilizator?",
     "users.delete.error": "Contul de utilizator nu a putut fi şters!",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Nu ai permisiunea de a şterge conturi de utilizatori",
+    "users.delete.error.permission.single": "Nu ai permisiunea de a şterge acest cont de utilizator",
+    "users.delete.error.lastadmin": "Nu se poate şterge cel mai recent administrator",
     "users.avatar.drop": "Trage o poză de profil aici…",
     "users.avatar.click": "…sau click pentru încărcare",
     "users.avatar.error.type": "Poţi încărca doar fişiere JPG, PNG sau GIF.",
     "users.avatar.error.folder.headline": "Directorul <i>/assets/avatars</i> nu are permisiuni de scriere.",
     "users.avatar.error.folder.text": "Verifică dacă directorul <i>/assets/avatars</i> există şi are permisiuni de scriere.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Nu ai permisiunea de a schimba poza de profil",
     "users.avatar.delete.error": "Poza de profil nu a putut fi ştearsă!",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Nu ai permisiunea de a şterge poza de profil a acestui utilizator",
     "users.avatar.delete.success": "Poza de profil a fost ştearsă!",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Acest utilizator nu are nicio poză de profil",
     "users.error.missing": "Contul de utilizator nu a putut fi găsit!",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Tu eşti singurul administrator. Acest lucru nu poate fi schimbat.",
+    "form.error.missing": "Formularul nu poate fi găsit",
+    "form.construct.error.invalid": "Schema de construcţie a formularului este nevalidă",
     "fields.required": "Obligatoriu",
     "fields.date.label": "Data",
     "fields.date.months": [
@@ -244,7 +244,7 @@
         "Decembrie"
     ],
     "fields.date.weekdays": [
-        "Duminica",
+        "Duminică",
         "Luni",
         "Marţi",
         "Miercuri",
@@ -307,7 +307,7 @@
     "editor.image.empty": "Această pagină nu conţine imagini.",
     "autocomplete.method.error": "Invalid autocomplete method",
     "blueprints.error.default.missing": "Missing default blueprint",
-    "permissions.error": "You are not allowed to do this",
+    "permissions.error": "Nu ai permisiunea de a face acest lucru",
     "error": "Eroare",
     "error.headline": "Eroare"
 }
